--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+body {
+  background: url('img/underwaterTurtle.jpg');
+  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .image #image {
   display: block;
   width: 80%;
@@ -13,18 +20,18 @@
 }
 
 .image:hover + #textUnderImage {
-  color: red;
-  content
+  background-color: #1f2833;
+  color: #c5c6c7;
 }
 
 .header {
   padding: 60px;
   padding-top:10px;
   padding-bottom: 10px;
-  background: #41b3a3;
+  background: #1f2833;
   text-align: center;
   font-size: 30px;
-  color: #c38d9e;
+  color: #66fcf1;
   border-color: black;
   border-bottom: 5px;
   border-style: groove;
@@ -32,14 +39,40 @@
 }
 
 footer {
+  color: #66fcf1;
+  font-style: italic;
+  border-color: black;
   display: block;
   font-size: 20px;
   padding-top:10px;
   padding-bottom: 10px;
   text-align: center;
-  background-color: #41b3a3;
+  background-color: #1f2833;
   border-style: solid;
 
+}
 
+.form{
+  padding: 10px;
+  font-size: 20px;
+  margin-bottom: 10px;
+  padding-bottom:20px;
+  background: #45a29e;
+  border: 1px solid black;
 
+}
+.submit-button {
+  background: green;
+  font-size: 25px;
+  font-style: bold;
+  position: relative;
+  top: 50%;
+  left: 48%;
+  height: 50px;
+  width: 100px;
+  margin-bottom: 20px;
+}
+
+.qTitle {
+  text-align: center;
 }
