--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,42 @@ footer {
 .qTitle {
   text-align: center;
 }
+
+#agreementLevel {
+  position: relative;
+  top: 50%;
+  left: 48%;
+  font-size: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* SLIDE STUFF STARTS HERE */
+
+.slidecontainer {
+  margin-left: auto;
+  margin-right: auto;
+}
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  appearance: none;
+  width: 100%; /* Full-width */
+  height: 25px; /* Specified height */
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
