--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ footer {
   text-align: center;
 }
 
-#agreementLevel {
+.sliderOutputs {
   position: relative;
   top: 50%;
   left: 48%;
@@ -86,6 +86,24 @@ footer {
   margin-right: auto;
 }
 
+#sliderQuestions {
+  text-align: center;
+}
+
+.Q5List {
+  position: relative;
+  top: 50%;
+  left: 35%;
+}
+
+.Q3textBox {
+  width: 100%;
+}
+
+#Q6textBox {
+  width: 100%;
+  height: 100px;
+}
 /* SLIDE STUFF STARTS HERE */
 
 .slidecontainer {
