--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
 #textUnderImage {
     text-align: center;
     font-size: 24px;
+
+
 }
 
 .image:hover + #textUnderImage {
@@ -57,12 +59,12 @@ footer {
   font-size: 20px;
   margin-bottom: 10px;
   padding-bottom:20px;
-  background: #45a29e;
+  background: #46c696;
   border: 1px solid black;
 
 }
 .submit-button {
-  background: green;
+  background: #28c1ce;
   font-size: 25px;
   font-style: bold;
   position: relative;
@@ -75,6 +77,7 @@ footer {
 
 .qTitle {
   text-align: center;
+  color: black
 }
 
 .sliderOutputs {
